<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    style="@style/BACKGROUND"
    tools:context=".FavoriteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favoriteSong"
        style="@style/TEXT"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notSongInFavorite"
        style="@style/TEXT3"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv2"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plsSignin"
        style="@style/TEXT3"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:backgroundTint="@color/music"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">
        <ListView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/lv_favoriteSongs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/music"
            tools:listitem="@layout/list_item_song"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>